--- a/SWP/Week1/SourceCode/SWP/web/index.html
+++ b/SWP/Week1/SourceCode/SWP/web/index.html
@@ -92,8 +92,9 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="col-lg-12">
                 <div class="caption">
               <h6>Hello Students</h6>
-              <h2>Welcome to Education</h2>
-              <p>This is an edu meeting HTML CSS template provided by <a rel="nofollow" href="https://templatemo.com/page/1" target="_blank">TemplateMo website</a>. This is a Bootstrap v5.1.3 layout. The video background is taken from Pexels website, a group of young people by <a rel="nofollow" href="https://www.pexels.com/@pressmaster" target="_blank">Pressmaster</a>.</p>
+              <h2>chào mừng đến với khóa học</h2>
+              <p>Nền tảng học online cải thiện và nâng cao học lực của bạn với 
+                  nhiều loại hình giảng dạy kết hợp với công nghệ thu thập và xử lý dữ liệu theo từng buổi học.</p>
               <div class="main-button-red">
                   <div class="scroll-to-section"><a href="#contact">Join Us Now!</a></div>
               </div>
